# CMakePratice

./: .gitignore  README.md  vcpkg.json
src/t1/: main.cpp
src/t2/: CMakeLists.txt
src/t2/code/: CMakeLists.txt  main.cpp
src/t3/lib/: CMakeLists.txt  hello.cpp
src/t4/: CMakeLists.txt
src/t4/code4/: CMakeLists.txt  main.cpp
src/t5/: CMakeLists.txt
src/t5/code5/: CMakeLists.txt  main.c
src/t6/: CMakeLists.txt
src/t6/cmake/: FindHELLO.cmake
src/t6/code6/: CMakeLists.txt  main.cpp
src/t7/: CMakeLists.txt  main.cpp
