FIND_PACKAGE(HELLO REQUIRED)
IF(HELLO_FOUND)
 ADD_EXECUTABLE(hello main.cpp)
 INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
 TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ENDIF(HELLO_FOUND)

find_package(jsoncpp CONFIG REQUIRED)
target_link_libraries(hello PRIVATE jsoncpp_lib)